cicd/k8s/deployments.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: gcr.io/rhyek-devops-lab-1/web:latest
          ports:
            - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-todos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos
  template:
    metadata:
      labels:
        app: todos
    spec:
      containers:
        - name: todos
          image: gcr.io/rhyek-devops-lab-1/todos:latest
          ports:
            - containerPort: 8080
