cicd/k8s/todos-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-todos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos
  template:
    metadata:
      labels:
        app: todos
    spec:
      containers:
        - name: service-todos
          image: gcr.io/rhyek-devops-lab-1/todos:latest
          ports:
            - containerPort: 8080
