cicd/k8s/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: app-web
          image: gcr.io/rhyek-devops-lab-1/web:latest
          ports:
            - containerPort: 8080
