cicd/k8s/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos
  labels:
    app: todos
spec:
  type: NodePort
  selector:
    app: todos
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: all-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: todos-ip
    kubernetes.io/ingress.class: gce
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /todos/*
            backend:
              serviceName: todos
              servicePort: 8080
          - path: /*
            backend:
              serviceName: web
              servicePort: 8080
